--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,45 @@
-# Core dependencies
+# QuantEdge Professional Trading Suite v3.0 Dependencies
+# Complete institutional-grade requirements for all professional modules
+
+# Core Framework
+streamlit>=1.28.0
 pandas>=2.1.0
 numpy>=1.24.0
-psycopg2-binary>=2.9.7
-sqlalchemy>=2.0.20
-alembic>=1.12.0
-pyyaml>=6.0.1
-python-dotenv>=1.0.0
-structlog>=23.1.0
-click>=8.1.7
-schedule>=1.2.0
-
-# Trading & Market Data
-alpaca-py>=0.25.0
-ib-insync>=0.9.86
-requests>=2.31.0
-yfinance>=0.2.27
-
-# Data Analysis & Backtesting
 scipy>=1.11.0
-scikit-learn>=1.3.0
-numba>=0.58.0
 
-# Dashboard & Visualization
-streamlit>=1.26.0
+# Professional Database & Data Management
+sqlalchemy>=2.0.20
+psycopg2-binary>=2.9.7
+alembic>=1.12.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+
+# Professional Visualization
 plotly>=5.15.0
 matplotlib>=3.7.2
 seaborn>=0.12.2
 
-# Testing & Code Quality
+# Trading & Financial APIs
+alpaca-py>=0.25.0
+alpaca-trade-api>=3.0.0
+yfinance>=0.2.27
+ib-insync>=0.9.86
+
+# Professional Analytics & Risk Management
+scikit-learn>=1.3.0
+statsmodels>=0.14.0
+numba>=0.58.0
+
+# Professional Logging & Monitoring
+structlog>=23.1.0
+pytz>=2023.3
+click>=8.1.7
+schedule>=1.2.0
+
+# Advanced Data Processing (Optional but Recommended)
+# ta-lib>=0.4.0  # Uncomment if you want advanced technical analysis
+
+# Professional Development & Testing
 pytest>=7.4.0
 pytest-cov>=4.1.0
 pytest-mock>=3.11.0
@@ -37,7 +49,22 @@ flake8>=6.0.0
 mypy>=1.5.0
 bandit>=1.7.5
 
-# Production & Monitoring
+# Production Deployment
 gunicorn>=21.2.0
 prometheus-client>=0.17.0
 sentry-sdk>=1.29.0
+psutil>=5.9.0
+
+# Professional Utilities
+pyyaml>=6.0.1
+toml>=0.10.2
+pathlib2>=2.3.7
+
+# Additional Professional Libraries
+openpyxl>=3.1.0      # Excel export capabilities
+joblib>=1.3.0        # Parallel processing
+tqdm>=4.65.0         # Progress bars for data loading
+cachetools>=5.3.0    # Professional caching
+
+# Professional Security
+cryptography>=41.0.0  # Secure credential management
